<resources>
    <string name="app_name">SecondHand Ecomerce</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_jual">Jual</string>
    <string name="title_daftar_jual">Daftar Jual</string>
    <string name="title_akun">Akun</string>
    <string name="title_notifications">Notifications</string>
    <string name="masuk">Masuk</string>
    <string name="email">Email</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar_di_sini">Daftar di sini</string>
    <string name="lengkapi_info_akun">Lengkapi Info Akun</string>
    <string name="nama">Nama*</string>
    <string name="ok">Ok</string>
    <string name="selected_item">Selected item:</string>
    <string-array name="daftar_kota">
        <item>-- Pilih Kota --</item>
        <item>Semarang</item>
        <item>Bandung</item>
        <item>Jakarta</item>
        <item>Yogyakarta</item>
        <item>Makasar</item>
        <item>Lampung</item>
        <item>Surabaya</item>
        <item>Padang</item>
    </string-array>
    <string-array name="kategori">
        <item>-- Pilih Kategori --</item>
        <item>Minuman</item>
        <item>Elektronik</item>
        <item>Fashion</item>
        <item>Hobi</item>
        <item>Kendaraan</item>
    </string-array>
    <string name="label_notifikai">Notifikasi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>