<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.tegarpenemuan.secondhandecomerce.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_jual"
            app:destination="@id/navigation_jual" />
    </fragment>

    <fragment
        android:id="@+id/navigation_jual"
        android:name="com.tegarpenemuan.secondhandecomerce.ui.jual.JualFragment"
        android:label="@string/title_jual"
        tools:layout="@layout/fragment_jual" >
        <action
            android:id="@+id/action_navigation_jual_to_previewFragment2"
            app:destination="@id/previewFragment2" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.tegarpenemuan.secondhandecomerce.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_daftar_jual"
        android:name="com.tegarpenemuan.secondhandecomerce.ui.daftarjual.DaftarJualFragment"
        android:label="DaftarJualFragment"
        tools:layout="@layout/fragment_daftar_jual">
        <action
            android:id="@+id/action_navigation_daftar_jual_to_navigation_jual"
            app:destination="@id/navigation_jual" />
    </fragment>

    <fragment
        android:id="@+id/navigation_akun"
        android:name="com.tegarpenemuan.secondhandecomerce.ui.akun.AkunFragment"
        android:label="AkunFragment"
        tools:layout="@layout/fragment_akun"/>
    <fragment
        android:id="@+id/previewFragment2"
        android:name="com.tegarpenemuan.secondhandecomerce.ui.preview.PreviewFragment"
        android:label="fragment_preview"
        tools:layout="@layout/fragment_preview" >
        <action
            android:id="@+id/action_previewFragment2_to_navigation_daftar_jual"
            app:destination="@id/navigation_daftar_jual" />
        <action
            android:id="@+id/action_previewFragment2_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
</navigation>